--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.psd filter=lfs diff=lfs merge=lfs -text
+*.bsp filter=lfs diff=lfs merge=lfs -text
+*.bsp.bz2 filter=lfs diff=lfs merge=lfs -text
+*.*.bz2 filter=lfs diff=lfs merge=lfs -text
+*.bz2 filter=lfs diff=lfs merge=lfs -text
